[#216] fixing some style guide spacing

--- a/client/styles/fonts/edTypeStyles.less
+++ b/client/styles/fonts/edTypeStyles.less
@@ -1,53 +1,53 @@
 @import "edFont.less";
 
 
-.edType(@textSize) {
-  .edFont;
+.edType( @textSize ) {
+  .edFont();
   font-style: normal;
   font-weight: 500;
 }
 
-.edType (@textSize) when ((@textSize) = heading-XXXL) {
+.edType( @textSize ) when (  @textSize = heading-XXXL ) {
   font-weight: 700;
   font-size: 4.8rem;
 }
 
-.edType (@textSize) when ((@textSize) = heading-XXL) {
+.edType( @textSize ) when (  @textSize = heading-XXL ) {
   font-weight: 700;
   font-size: 3.9rem;
 }
 
-.edType (@textSize) when ((@textSize) = heading-XL) {
+.edType( @textSize ) when ( @textSize = heading-XL ) {
   font-size: 3.3rem;
 }
 
-.edType (@textSize) when ((@textSize) = heading-L) {
+.edType( @textSize ) when ( @textSize = heading-L ) {
   font-weight: 400;
   font-size: 3.0rem;
 }
 
-.edType (@textSize) when ((@textSize) = heading-M) {
+.edType( @textSize ) when ( @textSize = heading-M ) {
   font-size: 2.5rem
 }
 
-.edType (@textSize) when ((@textSize) = heading-S) {
+.edType( @textSize ) when ( @textSize = heading-S ) {
   font-weight: 400;
   font-size: 2.2rem;
 }
 
-.edType (@textSize) when ((@textSize) = heading-XS) {
+.edType( @textSize ) when ( @textSize = heading-XS ) {
   font-size: 1.9rem;
 }
 
-.edType (@textSize) when ((@textSize) = heading-XXS) {
+.edType( @textSize ) when ( @textSize = heading-XXS ) {
   font-size: 1.5rem;
 }
 
-.edType (@textSize) when ((@textSize) = paragraph-L) {
+.edType( @textSize ) when ( @textSize = paragraph-L ) {
   font-size: 1.9rem;
 }
 
-.edType (@textSize) when ((@textSize) = paragraph-M) {
+.edType( @textSize ) when ( @textSize = paragraph-M ) {
   font-weight: 400;
   font-size: 1.5rem;
 }
